--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# macOS system files
+.DS_Store
+public/images/.DS_Store
+public/images/Christmas/.DS_Store
+public/images/Christmas/christmas-english/.DS_Store
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
